istio/virtualservices/argocd-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: argocd
spec:
  hosts:
  - "argocd.rohitpotato.xyz"
  gateways:
  - istio-system/main-gateway
  http:
  - route:
    - destination:
        host: argocd-server
        port:
          name: http
      weight: 100
