istio/virtualservices/grafana-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: monitoring
spec:
  hosts:
  - "grafana.rohitpotato.xyz"
  gateways:
  - istio-system/main-gateway
  http:
  - route:
    - destination:
        host: kube-prometheus-stack-grafana
        port:
          number: 80
      weight: 100
